tests/baselines/reference/jsFileCompilationDuplicateFunctionImplementationFileOrderReversed.errors.txt
a.ts(1,10): error TS2393: Duplicate function implementation.


==== a.ts (1 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
        return 30;
    }
    
==== b.js (0 errors) ====
    function foo() {
        return 10;
    }
    
    